WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
300687
[FairPlay/MSE] HDCP status is no longer reported properly back to the CDMInstance
https://bugs.webkit.org/show_bug.cgi?id=300687
Summary
[FairPlay/MSE] HDCP status is no longer reported properly back to the CDMInst...
Jean-Yves Avenard [:jya]
Reported
2025-10-14 03:23:05 PDT
Regression from adoption AudioVideoRendererAVFObjC. Change of HDCP status is now reported as a decoding error.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-10-14 03:23:10 PDT
<
rdar://problem/162590434
>
Jean-Yves Avenard [:jya]
Comment 2
2025-10-14 04:02:25 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/52289
EWS
Comment 3
2025-10-14 14:55:01 PDT
Committed
301500@main
(6d5d627497f5): <
https://commits.webkit.org/301500@main
> Reviewed commits have been landed. Closing PR #52289 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug