[FairPlay/MSE] HDCP status is no longer reported properly back to the CDMInstance https://bugs.webkit.org/show_bug.cgi?id=300687 rdar://162590434

Reviewed by Eric Carlson.

In 301011@main we treated all errors from the AVSBDL as a decoding error.
But if it's an HDCP error, it actually contains the HDCP obscured information.

We add a new AudioVideoRenderer callback that will contain the obscured
value so that it can be passed to the CDMInstance if any.

Covered by existing test: http/tests/media/fairplay/legacy-fairplay-mse-muxed-av-nowait.html
which would otherwise report on error.
* Source/WebCore/platform/graphics/AudioVideoRenderer.h:
(WebCore::VideoInterface::notifyInsufficientExternalProtectionChanged):
* Source/WebCore/platform/graphics/avfoundation/AudioVideoRendererAVFObjC.h:
* Source/WebCore/platform/graphics/avfoundation/AudioVideoRendererAVFObjC.mm:
(WebCore::AudioVideoRendererAVFObjC::notifyInsufficientExternalProtectionChanged):
(WebCore::AudioVideoRendererAVFObjC::setVideoRenderer): Set the callback listener.
* Source/WebCore/platform/graphics/avfoundation/objc/MediaPlayerPrivateMediaSourceAVFObjC.mm:
(WebCore::MediaPlayerPrivateMediaSourceAVFObjC::MediaPlayerPrivateMediaSourceAVFObjC):

Canonical link: https://commits.webkit.org/301500@main